Вносить доопрацювання у розмітку та стилізацію

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
      <section class="section">
 
         <div class="container feature">
-            <h2 class="section-title">Наши особенности</h2>
-
+            <h2 class="visually-hidden">Наши особенности</h2>
             <ul class="feature-list">
                 <li>
                     <h3 class="title">Внимание к деталям</h3>
@@ -70,12 +69,12 @@
      </section>
     
      <!--Чем мы занимаемся-->
-        <section class="section">
+        <section class="section-work">
 
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
 
-                <ul class="titlt-example">
+                <ul class="title-example">
                     <li class="exampl-foto"><img src="./images/box1.jpg" alt="example" width="370" height="294"></li>
                     <li class="exampl-foto"><img src="./images/box2.jpg" alt="example" width="370" height="294"></li>
                     <li class="exampl-foto"><img src="./images/box3.jpg" alt="example" width="370" height="294"></li>
@@ -87,24 +86,32 @@
      <!--Команда-->
         <section class="team-section">
 
-            <div class="container section-team">
+            <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="title-team"><img class="team-foto" src="./images/img1.jpg" alt="член команди" width="270" height="260">
-                        <h3 class="title">Игорь Демьяненко</h3>
-                        <p class="team-text">Product Designer</p>
+                        <div class="box-team">
+                            <h3 class="title">Игорь Демьяненко</h3>
+                            <p class="team-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="title-team"><img class="team-foto" src="./images/img2.jpg" alt="член команди" width="270" height="260">
-                        <h3 class="title">Ольга Репина</h3>
-                        <p class="team-text">Frontend Developer</p>
+                        <div class="box-team">
+                            <h3 class="title">Ольга Репина</h3>
+                            <p class="team-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="title-team"><img class="team-foto" src="./images/img3.jpg" alt="член команди" width="270" height="260">
-                        <h3 class="title">Николай Тарасов</h3>
-                        <p class="team-text">Marketing</p>
+                        <div class="box-team">
+                            <h3 class="title">Николай Тарасов</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="title-team"><img class="team-foto" src="./images/img4.jpg" alt="член команди" width="270" height="260">
-                        <h3 class="title">Михаил Ермаков</h3>
-                        <p class="team-text">UI Designer</p>
+                        <div class="box-team">
+                            <h3 class="title">Михаил Ермаков</h3>
+                            <p class="team-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -122,7 +129,7 @@
             <address class="address">
                 <p class="text-address">г. Киев, пр-т Леси Украинки, 26</p>
                 <a href="mailto:info@example.com" class="link">info@example.com</a> <br>
-                <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+                <a href="tel:+380991111111" class="link-tel">+38 099 111 11 11</a>
             </address>
         </div>
     </footer>
